--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^4.5.0",
     "next": "12.1.5",
+    "next-auth": "^4.3.3",
     "normalize.css": "^8.0.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
