--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "moment": "^2.29.3",
     "mongodb": "^4.5.0",
     "next": "12.1.5",
     "next-auth": "^4.3.3",
